--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 /target/
-/screenshots/
+/screenshots/*
 /assets/*
 !/assets/nulMap4.gltf
 !/screenshots/ScreenshotThe2024-06-24-MonAt8.51.38Num0.png
