--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 bevy = { version = "0.15.2", features = ["bevy_dev_tools"] }
 bevy_ecs = "0.15.2"
 bevy_egui = "0.32.0"
+bevy_rapier3d = "0.28.0"
 chrono = "0.4.39"
 rand = "0.8.5"
 
