WIP spawn polygons instead of gltf

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,8 +17,8 @@ default-features = true
 features = ["std"]
 
 
-[profile.release]
-opt-level = 3
-lto = "fat" # Link Time Optimization
-codegen-units = 1 # Compile All same time
-panic = "abort"
+#[profile.release]
+#opt-level = 3
+#lto = "fat" # Link Time Optimization
+#codegen-units = 1 # Compile All same time
+#panic = "abort"
