--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 bevy = { version = "0.15.2", features = ["bevy_dev_tools"] }
+bevy-inspector-egui = "0.29.1"
 bevy_ecs = "0.15.2"
 bevy_egui = "0.32.0"
 bevy_rapier3d = "0.28.0"
