--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ bevy_ecs = "0.15.2"
 bevy_egui = "0.32.0"
 bevy_rapier3d = "0.28.0"
 chrono = "0.4.39"
+iyes_perf_ui = "0.4.0"
 rand = "0.8.5"
 
 [dependencies.async-std]
