--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,8 @@ edition = "2024"
 
 [dependencies]
 bevy = { version = "0.16.1", features = ["bevy_dev_tools"] }
+bevy-inspector-egui = "0.33.1"
+bevy_egui = "0.36.0"
 bevy_rapier3d = "0.30.0"
 
 # bevy-inspector-egui = "0.29.1"
